--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
         show-sql: true
     profiles:
         active: default
+    zipkin:
+        base-url: http://localhost:9411
 eureka:
     client:
         service-url:
