--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
         active: default
     zipkin:
         base-url: http://localhost:9411
+    rabbitmq:
+        addresses: localhost:5672
 eureka:
     client:
         service-url:
