--- a/customer/src/main/resources/application-docker.yml
+++ b/customer/src/main/resources/application-docker.yml
@@ -17,6 +17,8 @@ spring:
     show-sql: true
   zipkin:
     base-url: http://zipkin:9411
+  rabbitmq:
+    addresses: rabbitmq:5672
 eureka:
   client:
     service-url:
