--- a/notification/src/main/resources/application-kube.yml
+++ b/notification/src/main/resources/application-kube.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8082
 spring:
   application:
-    name: customer
+    name: notification
   datasource:
     password: password
-    url: jdbc:postgresql://postgres:5432/customer
+    url: jdbc:postgresql://postgres:5432/notification
     username: abdulrehman
   jpa:
     hibernate:
@@ -26,3 +26,12 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     enabled: false
+
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queues:
+    notification: notification.queue
+  routing-keys:
+    internal-notification: internal.notification.routing-key
+
